# L-graph_system

./: .gitignore  LICENSE  README.md  checker.py
L_graph_system/: LICENSE  README.md  setup.cfg
L_graph_system/src/L_graph_system/: __init__.py  arc.py  lgraph.py
lgraphs/: arc.py  checker.py  grammar.py  lgraph.py  vertex.py
