[metadata]
name = L_graph_system
version = 0.0.6
author = Konstantin Saurin
author_email = tasoshka654@gmail.com
description = A package to work with L-graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RaidenSA/L-graph_system
project_urls =
    Bug Tracker = https://github.com/RaidenSA/L-graph_system
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where =src